--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   "dependencies": {
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-input-mask": "^2.0.4",
+    "styled-components": "^5.3.3",
+    "yup": "^0.32.11",
+    "yup-phone": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
+    "@types/react-input-mask": "^3.0.1",
+    "@types/styled-components": "^5.1.21",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
     "typescript": "4.5.5"
